@@ -18,6 +18,7 @@
 * Fixed a bug with expanding static placeholder by clicking on "Expand All" button
 * Fixed a bug where descendant pages with a custom url would lose the overwritten
   url on save.
+* Added form validation logic to prevent users from moving the home page under another page.
 
 
 === 3.5.2 (2018-04-11) ===
